--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ecommerce",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "nodemon app.js"
@@ -9,9 +8,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "nodemon": "^3.1.2"
-  }
+    "mongoose": "^8.4.1",
+    "nodemon": "^3.1.3"
+  },
+  "description": ""
 }
